# Char-by-char-text-prediction

./: .gitignore  Makefile  TODO.md  pyproject.toml
Model_files/_20260421_115719/: best.ckpt  epoch_001.ckpt  epoch_002.ckpt  epoch_003.ckpt  epoch_004.ckpt  epoch_005.ckpt  epoch_006.ckpt  epoch_007.ckpt  epoch_008.ckpt  metrics.jsonl
Model_files/rnn_20260421_125916/: best.ckpt  epoch_001.ckpt  epoch_002.ckpt  epoch_003.ckpt  epoch_004.ckpt  epoch_005.ckpt  epoch_006.ckpt  epoch_007.ckpt  epoch_008.ckpt  metrics.jsonl
Model_files/rnn_20260421_133436/: best.ckpt  config.json  epoch_001.ckpt  epoch_002.ckpt  epoch_003.ckpt  epoch_004.ckpt  epoch_005.ckpt  epoch_006.ckpt  epoch_007.ckpt  epoch_008.ckpt  metrics.jsonl
configs/: gru_large.yaml  lstm_large.yaml  rnn.yaml  rnn_large.yaml  transformer_large.yaml
data/raw/: test_text.txt  tiny_shakespeare.txt
scripts/: train.py
src/: utils.py
src/data/: dataset.py  preprecessing.py
src/inference/: predictor.py
src/models/: GRU.py  LSTM.py  RNN.py  Transformer.py  autodiscover.py  base.py  registry.py
src/training/: callbacks.py  config.py  trainer.py
